# VCL3D_winnot

./: CMakeLists.txt  README.md
include/: socketCS.h
include/LiveScanClient/: calibration.h  filter.h  freenect2Capture.h  freenectCapture.h  iCapture.h  imageRendererGLX.h  kinectCapture.h  liveScanClient.h  utils.h  viewer.h
src/: socketCS.cpp
src/LiveScanClient/: calibration.cpp  frameFileWriterReader.cpp  freenect2Capture.cpp  freenectCapture.cpp  iCapture.cpp  iMarker.cpp  imageRenderer.cpp  imageRendererGLX.cpp  kinectCapture.cpp  liveScanClient.cpp  marker.cpp  viewer.cpp
